update docs for tenant creation
